Fixed expanded layouts on iOS and viewport height

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -18,7 +18,7 @@ body {
   @include lato;
 
   min-width: 100vw;
-  min-height: 100vh;
+  // min-height: 100vh;
 
   display: inline-block;
 
